# encoding

./: .clang-format  .clippy.toml  .editorconfig  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  README.zh-CN.md  SECURITY.md  go.work  package-lock.json  package.json  requirements.txt
.archive/: INDEX.md
.archive/specs-legacy-20260423/: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  (+1 more)
algorithms/shared/rust/: Cargo.toml
algorithms/shared/rust/src/: cli.rs  lib.rs
algorithms/shared/rust/src/codec/: bits.rs  buffer.rs  buffer_policy.rs  encoder.rs  error.rs  frequency.rs  streaming.rs  write.rs
algorithms/shared/rust/tests/: buffer.rs  lifecycle.rs
changelog/: 2026-03-10_workflow-deep-standardization.md  2026-03-13_docs-information-architecture-standardization.md  2026-03-13_huffman-cross-language-fix.md  2026-03-13_workflow-python-setup-fix.md
docs/: index.md  package.json
openspec/: config.yaml
reports/: arithmetic_cpp_report_20251124-132655.txt  arithmetic_cpp_report_20251124-143617.txt  huffman_report_20251124-132655.txt  huffman_report_20251124-143617.txt  range_rust_report_20251124-132655.txt  range_rust_report_20251124-143617.txt
scripts/: run_all_bench.py
specs/: README.md
tests/: gen_testdata.py  test_range_bench.py  test_run_all_bench.py
(+241 files in other folders)
