[package]
name = "compresskit-codec"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "compresskit_codec"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
huffman = { path = "../../huffman/rust" }
arithmetic = { path = "../../arithmetic/rust" }
rle = { path = "../../rle/rust" }
rangecoder = { path = "../../range/rust" }
rand = "0.8"
